2011-10-15 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Mentioned z180 and r2k ports and long long data type in manual.

2011-10-14 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/sdcc.nsi: remove include/asm/r2k directoriy
	  during uninstallation
	* */*.dsw, */*.dsw: removed obsolete VS6 project files
	* support/Util: renamed to support/util

2011-10-13 Borut Razem <borut.razem AT gmail.com>

	* .version, doc/sdccman.lyx: bumped version to 3.0.6
	* src/SDCCicode.c:
	  disable -O2 optimization for i386 Linux and mingw platforms
	  (solaris i386 is OK);
	  see patch #3285611: Workaround gcc 4.6.0 bug with sdcc 3.0.0
	* src/SDCCval.c:
	  Microsoft C compiler doesn't support hexadecimal floating-point
	  literals

2011-10-12 Borut Razem <borut.razem AT gmail.com>

	* device/include/Makefile.in:
	  fixed detection if files with the given extension exist;
	  specially treat z80 family: z180, r2k and gbz80 targets
	* support/scripts/sdcc.nsi: added Rabbit 2000 support
	* sdas/asrab/asrab.vcxproj, sdas/asrab/asrab.vcxproj.filters,
	  sdcc.sln, src/src.vcxproj, src/src.vcxproj.filters, 
	  src/z80/z80.vcxproj, src/z80/z80.vcxproj.filters:
	  added sdasrab assembler to the project
	* debugger/mcs51/simi.c: cygwin doesn't support O_ASYNC

2011-10-11 Borut Razem <borut.razem AT gmail.com>

	* device/include/Makefile.in: install/copy only existing files
	* src/SDCCicode.c: disable -O2 optimization for all i386 platforms;
	  see patch #3285611: Workaround gcc 4.6.0 bug with sdcc 3.0.0

2011-10-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* configure.in:
	  Fixed bug #3413688.

2011-10-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* sdas/asrab/rabbit.h,
	  sdas/asrab/rabbitadr.c,
	  sdas/asrab/rabbitmch.c:
	  Leland Morrison's fix for ld n (hl), hl and ld hl, n (hl).
	* src/z80/peeph-r2k.def:
	  Enable peepholes using ld hl, n (hl).

2011-10-10 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
